# chessament

./: .clang-tidy  .craft.ini  .craftignore  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  XmlMessages.sh  application-vnd-kde-chessament.xml  bbppairings-remove-werror.patch  gitlab-ci.yml  org.kde.chessament.appdata.xml  org.kde.chessament.desktop  org.kde.chessament.metainfo.xml  org.kde.chessament.xml
android/: AndroidManifest.xml
android/res/drawable/: splash.xml
autotests/: CMakeLists.txt  aobtest.cpp  buchholztest.cpp  ratinglisttest.cpp  rusttest.cpp  tiebreakstest.cpp  tournamenttest.cpp  utilstest.cpp
autotests/data/: buchholz_1.trf  buchholz_1.trf.bh  buchholz_1.trf.standings  buchholz_2.trf  buchholz_2.trf.bh  buchholz_3.trf  buchholz_3.trf.standings  buchholz_4.trf  buchholz_4.trf.standings  ratinglist.html  tournament_1.txt.aob  tournament_1.txt.bh  tournament_1.txt.standings  tournament_1.txt.win  tournament_1.txt.won  tournament_2.trf
doc/: CMakeLists.txt  index.docbook
po/ar/: chessament.po  chessament_mime.po
po/ca/: chessament.po  chessament_mime.po
po/ca/docs/chessament/: index.docbook
po/ca@valencia/: chessament.po  chessament_mime.po
po/cs/: chessament.po
po/de/: chessament.po  chessament_mime.po
po/es/: chessament.po  chessament_mime.po
po/es/docs/chessament/: index.docbook
po/eu/: chessament.po
po/fi/: chessament.po
po/fr/: chessament.po  chessament_mime.po
po/ga/: chessament.po
po/gl/: chessament.po
po/he/: chessament.po  chessament_mime.po
po/ia/: chessament.po  chessament_mime.po
po/it/: chessament.po  chessament_mime.po
po/it/docs/chessament/: index.docbook
po/ka/: chessament.po  chessament_mime.po
po/ko/: chessament.po  chessament_mime.po
po/lt/: chessament.po  chessament_mime.po
po/lv/: chessament.po
po/nl/: chessament.po  chessament_mime.po
po/nl/docs/chessament/: index.docbook
po/pl/: chessament.po
po/pt_BR/: chessament.po  chessament_mime.po
po/sk/: chessament.po  chessament_mime.po
po/sl/: chessament.po  chessament_mime.po
po/sv/: chessament.po
po/tr/: chessament.po  chessament_mime.po
po/ug/: chessament.po  chessament_mime.po
po/uk/: chessament.po  chessament_mime.po
po/uk/docs/chessament/: index.docbook
po/zh_CN/: chessament.po  chessament_mime.po
po/zh_TW/: chessament.po
src/: CMakeLists.txt  Messages.sh  account.cpp  account.h  arbitersmodel.cpp  arbitersmodel.h  byesmodel.cpp  byesmodel.h  chessament-index.qdoc  chessament.qdocconf  chessamentapplication.cpp  chessamentapplication.h  chessamentconfig.kcfg  config.kcfg  controller.cpp  controller.h  db.h  document.cpp  document.h  documents.cpp  main.cpp  main.rs  pairingengine.cpp  pairingmodel.cpp  pairingmodel.h  player.cpp  playersmodel.cpp  playersmodel.h  ratinglistmodel.cpp  ratinglistmodel.h  round.cpp  round.h  roundmodel.cpp  roundmodel.h  searchplayersmodel.cpp  searchplayersmodel.h  standingsmodel.cpp  standingsmodel.h  tiebreakmodel.cpp  tiebreakmodel.h  (+6 more)
src/documents/default/: document.html  style.css  theme.css
src/flags/: CMakeLists.txt
src/libtournament/: CMakeLists.txt  db.h  event.cpp  event.h  pairing.cpp  pairing.h  pairingengine.cpp  pairingengine.h  player.cpp  player.h  round.cpp  round.h  state.cpp  state.h  tiebreak.h  tiebreaks.cpp  tiebreaks.h  tournament.cpp  tournament.h  tournamentstate.cpp  trf.cpp  trf.h  utils.cpp
src/libtournament/tiebreaks/: CMakeLists.txt  buchholz.cpp  buchholz.h  numberwins.cpp  numberwins.h  points.cpp  points.h  tiebreak.h  tiebreaks.h
src/qml/: .contextProperties.ini  ActionCollection.qml  AddPlayerDialog.qml  AddTiebreakDialog.qml  BottomNavigation.qml  DeletePairingsDialog.qml  DeletePlayerDialog.qml  DeleteRoundDialog.qml  DocsPage.qml  Main.qml  NewTournamentDialog.qml  PairRoundDialog.qml  PairingsPage.qml  PlayersPage.qml  PlayersPageTableDelegate.qml  ResultsFooter.qml  Sidebar.qml  SortPlayersDialog.qml  StandingsPage.qml  TableDelegate.qml  TablePage.qml  TiebreakDialog.qml  TournamentSettings.qml  TournamentSettingsCalendar.qml  TournamentSettingsCloud.qml  TournamentSettingsFormat.qml  TournamentSettingsInformation.qml  WelcomePage.qml
src/qml/components/: ArbiterDelegate.qml  FormCardSearchFieldDelegate.qml  MenuBar.qml  RatingField.qml  StartingRankField.qml  TiebreakDelegate.qml  TimeControlDelegate.qml
src/qml/player/: PlayerDetails.qml  PlayerPairingsPage.qml
src/settings/: AccountsPage.qml  AddAccountDialog.qml  CMakeLists.txt  ChessamentConfigurationView.qml  GeneralPage.qml  RatingListsPage.qml
src/tournament/: CMakeLists.txt  Cargo.toml  accountconfig.kcfg  arbiter.cpp  arbiter.h  build.rs  db.h  event.cpp  event.h  federations.h  libtournament.qdoc  libtournament.qdocconf  pairing.cpp  pairing.h  pairingengine.cpp  pairingengine.h  player.cpp  player.h  ratinglist.cpp  ratinglist.h  round.cpp  round.h  standing.cpp  standing.h  state.cpp  state.h  timecontrol.cpp  timecontrol.h  tournament.cpp  tournament.h  trf.cpp  trf.h  utils.cpp  utils.h
src/tournament/ratinglists/: CMakeLists.txt  fidereader.cpp  fidereader.h  htmlreader.cpp  htmlreader.h  ratinglist.cpp  ratinglist.h  ratinglistplayer.cpp  ratinglistplayer.h  reader.cpp  reader.h
src/tournament/src/: event.rs  lib.rs  player.rs  ratinglist.rs  tournament.rs
src/tournament/sync/: CMakeLists.txt  account.cpp  account.h  accountmanager.cpp  accountmanager.h  syncengine.cpp  syncengine.h
src/tournament/tiebreaks/: CMakeLists.txt  aob.cpp  aob.h  buchholz.cpp  buchholz.h  dummy.h  numberwins.cpp  numberwins.h  playedblack.cpp  playedblack.h  points.cpp  points.h  tiebreak.cpp  tiebreak.h  won.cpp  won.h
src/tournament/trf/: CMakeLists.txt  reader.cpp  reader.h  trf.cpp  trf.h  writer.cpp  writer.h
